# LDCF-Bioinformatics-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: config.txt
src/: benchmark.cpp  benchmark.hpp  cuckoo_filter.cpp  cuckoo_filter.hpp  genome_loader.cpp  genome_loader.hpp  ldcf.cpp  ldcf.hpp  main.cpp
